[package]
name = "mo-yu-in-clb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full" ] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "default"] }
